Revision history for {{$dist->name}}

{{$NEXT}}

0.05      2017-01-19 12:09:06-05:00 America/New_York (TRIAL RELEASE)

  [BUILD]

    * add missing dependency on stricturesa

0.04      2017-01-19 12:09:06-05:00 America/New_York (TRIAL RELEASE)

  [ENHANCEMENT]

    * New method: Peer::detach
    * Upon destruction, objects additionally emit a 'detach' event.
    * Net::Object::Peer::Subscriptions: new methods: find, nelem
    * Peer::subscriptions now takes arguments which are passed on to find
    * New role Peer::Ephemeral - instructs Peer to take a strong reference
      to the peer.

    * Most classes now track the reference address of an emitter in
      case the emitter has been proxied.  See the Cookbook for a usage.

0.03      2016-12-27 17:48:29-05:00 America/New_York (TRIAL RELEASE)

  [BUG FIX]

    * DEMOLISH was implemented by role, rather than being modified.


0.02      2016-12-26 17:41:04-05:00 America/New_York (TRIAL RELEASE)

  [BUG FIX]
    * Listener didn't properly weaken reference to peer object

  [DOCUMENTATION]
    * better synopsis

0.01      2016-12-26 17:41:04-05:00 America/New_York (TRIAL RELEASE)